--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
       });
       
       // On initialiserait ici l'application avec le code JavaScript fourni
-      // initializeApp();
+      initializeApp();
     });
   </script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script src="prediction.js"></script>
 </body>
 </html>
